--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "framer-motion": "^11.3.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
