--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
+    "use-onclickoutside": "^0.4.1",
     "web-vitals": "^2.1.4"
   },
   "repository": {
