--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^11.3.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-otp-input": "^3.1.1",
