--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "otp-generator": "^4.0.1",
