--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^11.3.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
     "use-onclickoutside": "^0.4.1",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
