--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@szhsin/react-accordion": "^1.2.5",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.12",
     "react": "^18.2.0",
